# poc-sed

./: README.md
api/: .gitignore  pyproject.toml  settings.toml
api/.docker/: database.sh  redis.sh
api/apps/emails/: serializers.py  service.py  urls.py  views.py
api/apps/tasks/: tasks.py  utils.py
api/apps/tokens/: models.py  repository.py  serializers.py  service.py  urls.py  views.py
api/apps/tokens/migrations/: 0001_initial.py
api/core/: repository.py  settings.py  urls.py
