[tool.poetry]
name = "poc-sed-api"
version = "0.1.0"
description = ""
authors = ["João Oliveira <jvitoroliveira0711@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.15.2"
dynaconf = "^3.2.6"
django = "^5.0"
mssql-django = "^1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
