[tool.poetry]
name = "poc-sed-api"
version = "0.1.0"
description = ""
authors = ["João Oliveira <jvitoroliveira0711@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = ">=4.0,<5.0"  # Usando a versão 4.x do Django
djangorestframework = "^3.15.2"
dynaconf = "3.2.6"
mssql-django = "^1.5"
django-q = "1.3.9"
redis = "3.5.3"  # Mantido para compatibilidade com django-q

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
